# python-project-template

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg
docs/source/_build/html/: searchindex.js
docs/source/_build/html/.doctrees/: environment.pickle  index.doctree
